--- a/package.json
+++ b/package.json
@@ -1,28 +1,44 @@
 {
-  "name": "",
-  "version": "",
+  "name": "notes",
+  "version": "1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "create": "vue create ."
+    "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@tiptap/extension-bullet-list": "^2.0.0-beta.26",
+    "@tiptap/extension-document": "^2.0.0-beta.15",
+    "@tiptap/extension-list-item": "^2.0.0-beta.20",
+    "@tiptap/extension-paragraph": "^2.0.0-beta.23",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.48",
+    "@tiptap/starter-kit": "^2.0.0-beta.183",
+    "@tiptap/vue-3": "^2.0.0-beta.90",
     "@vue/cli": "^5.0.4",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.0",
+    "quill": "^1.3.6",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-sanitize": "^0.2.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-loader": "^8.2.4",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue": "^3.2.32",
+    "vue-loader": "^17.0.0",
+    "vue-loader-plugin": "^1.3.0",
+    "vue-svg-loader": "^0.17.0-beta.2",
+    "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
     "> 1%",
